--- a/page4.html
+++ b/page4.html
@@ -50,7 +50,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-info display-4" href="index.html#header5-2s" aria-expanded="false"><span class="mbrib-home mbr-iconfont mbr-iconfont-btn"></span></a></li><li class="nav-item dropdown">
                     <a class="nav-link link text-info dropdown-toggle display-4" href="#top" data-toggle="dropdown-submenu" aria-expanded="false">Project</a><div class="dropdown-menu"><a class="text-info dropdown-item display-4" href="page1.html#content5-1h">Concept<br></a><div class="dropdown"><a class="text-info dropdown-item dropdown-toggle display-4" href="page1.html#features15-y" data-toggle="dropdown-submenu" aria-expanded="false">Verhalen<br></a><div class="dropdown-menu dropdown-submenu"><a class="text-info dropdown-item display-4" href="page1.html#header3-11">Robin</a><a class="text-info dropdown-item display-4" href="page1.html#header3-12">Tomaso<br></a><a class="text-info dropdown-item display-4" href="page1.html#header3-13">Sandra</a></div></div></div>
-                </li><li class="nav-item dropdown"><a class="nav-link link text-info dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="false">Achter de schermen</a><div class="dropdown-menu"><a class="text-info dropdown-item display-4" href="page2.html#content5-2u">Vooronderzoek</a><a class="text-info dropdown-item display-4" href="page4.html">Wassen Kubus</a><a class="text-info dropdown-item display-4" href="page5.html#content5-2v" aria-expanded="false">Opnames</a><a class="text-info dropdown-item display-4" href="page14.html#content5-31" aria-expanded="false">Fotoshoot</a></div></li>
+                </li><li class="nav-item dropdown open"><a class="nav-link link text-info dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true">Achter de schermen</a><div class="dropdown-menu"><a class="text-info dropdown-item display-4" href="page2.html#content5-2u">Vooronderzoek</a><a class="text-info dropdown-item display-4" href="page4.html">Wassen Kubus</a><a class="text-info dropdown-item display-4" href="page5.html#content5-2v" aria-expanded="false">Foto's</a></div></li>
                 <li class="nav-item dropdown">
                     <a class="nav-link link text-info display-4" href="page3.html#content5-36">
                         Over ons
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="mbr-section content5 cid-re740rXyK3" id="content5-1b">
+<section class="engine"><a href="https://mobirise.info/b">how to create your own website for free</a></section><section class="mbr-section content5 cid-re740rXyK3" id="content5-1b">
 
     
 
@@ -182,8 +182,8 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-figure" style="width: 65%;">
-                <img src="assets/images/benodigdheden-1014x761.jpg" alt="Mobirise" title="">
+            <div class="mbr-figure" style="width: 35%;">
+                <img src="assets/images/blok-was-2-474x632.jpg" alt="Mobirise" title="">
             </div>
 
             <div class="media-content">
