--- a/page5.html
+++ b/page5.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo-188x187.png" type="image/x-icon">
   <meta name="description" content="Web Page Builder Description">
-  <title>filmopnames</title>
+  <title>Foto's</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
@@ -19,7 +19,6 @@
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="stylesheet" href="assets/gallery/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
@@ -52,7 +51,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-info display-4" href="index.html#header5-2s" aria-expanded="false"><span class="mbrib-home mbr-iconfont mbr-iconfont-btn"></span></a></li><li class="nav-item dropdown">
                     <a class="nav-link link text-info dropdown-toggle display-4" href="#top" data-toggle="dropdown-submenu" aria-expanded="false">Project</a><div class="dropdown-menu"><a class="text-info dropdown-item display-4" href="page1.html#content5-1h">Concept<br></a><div class="dropdown"><a class="text-info dropdown-item dropdown-toggle display-4" href="page1.html#features15-y" data-toggle="dropdown-submenu" aria-expanded="false">Verhalen<br></a><div class="dropdown-menu dropdown-submenu"><a class="text-info dropdown-item display-4" href="page1.html#header3-11">Robin</a><a class="text-info dropdown-item display-4" href="page1.html#header3-12">Tomaso<br></a><a class="text-info dropdown-item display-4" href="page1.html#header3-13">Sandra</a></div></div></div>
-                </li><li class="nav-item dropdown"><a class="nav-link link text-info dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="false">Achter de schermen</a><div class="dropdown-menu"><a class="text-info dropdown-item display-4" href="page2.html#content5-2u">Vooronderzoek</a><a class="text-info dropdown-item display-4" href="page4.html">Wassen Kubus</a><a class="text-info dropdown-item display-4" href="page5.html#content5-2v" aria-expanded="false">Opnames</a><a class="text-info dropdown-item display-4" href="page14.html#content5-31" aria-expanded="false">Fotoshoot</a></div></li>
+                </li><li class="nav-item dropdown open"><a class="nav-link link text-info dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true">Achter de schermen</a><div class="dropdown-menu"><a class="text-info dropdown-item display-4" href="page2.html#content5-2u">Vooronderzoek</a><a class="text-info dropdown-item display-4" href="page4.html">Wassen Kubus</a><a class="text-info dropdown-item display-4" href="page5.html#content5-2v" aria-expanded="false">Foto's</a></div></li>
                 <li class="nav-item dropdown">
                     <a class="nav-link link text-info display-4" href="page3.html#content5-36">
                         Over ons
@@ -63,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy website creator</a></section><section class="mbr-section content5 cid-rebqzaYkJC" id="content5-2v">
+<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="mbr-section content5 cid-rebqzaYkJC" id="content5-2v">
 
     
 
@@ -79,16 +78,6 @@
             </div>
         </div>
     </div>
-</section>
-
-<section class="mbr-gallery mbr-slider-carousel cid-rebqJNLBGP" id="gallery3-2x">
-
-    
-
-    <div class="container">
-        <div><!-- Filter --><!-- Gallery --><div class="mbr-gallery-row"><div class="mbr-gallery-layout-default"><div><div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Geweldige"><div href="#lb-gallery3-2x" data-slide-to="0" data-toggle="modal"><img src="assets/images/gallery00.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Sympathieke"><div href="#lb-gallery3-2x" data-slide-to="1" data-toggle="modal"><img src="assets/images/gallery01.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Creatieve"><div href="#lb-gallery3-2x" data-slide-to="2" data-toggle="modal"><img src="assets/images/gallery02.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Bewegende"><div href="#lb-gallery3-2x" data-slide-to="3" data-toggle="modal"><img src="assets/images/gallery03.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Geweldige"><div href="#lb-gallery3-2x" data-slide-to="4" data-toggle="modal"><img src="assets/images/gallery04.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Geweldige"><div href="#lb-gallery3-2x" data-slide-to="5" data-toggle="modal"><img src="assets/images/gallery05.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Sympathieke"><div href="#lb-gallery3-2x" data-slide-to="6" data-toggle="modal"><img src="assets/images/gallery06.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Bewegende"><div href="#lb-gallery3-2x" data-slide-to="7" data-toggle="modal"><img src="assets/images/gallery07.jpg" alt="" title=""><span class="icon-focus"></span></div></div></div></div><div class="clearfix"></div></div></div><!-- Lightbox --><div data-app-prevent-settings="" class="mbr-slider modal fade carousel slide" tabindex="-1" data-keyboard="true" data-interval="false" id="lb-gallery3-2x"><div class="modal-dialog"><div class="modal-content"><div class="modal-body"><div class="carousel-inner"><div class="carousel-item active"><img src="assets/images/gallery00.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/gallery01.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/gallery02.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/gallery03.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/gallery04.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/gallery05.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/gallery06.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/gallery07.jpg" alt="" title=""></div></div><a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#lb-gallery3-2x"><span class="mbri-left mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Previous</span></a><a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#lb-gallery3-2x"><span class="mbri-right mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Next</span></a><a class="close" href="#" role="button" data-dismiss="modal"><span class="sr-only">Close</span></a></div></div></div></div></div>
-    </div>
-
 </section>
 
 <section class="carousel slide cid-rebqLTMMsf" data-interval="false" id="slider1-2z">
@@ -130,19 +119,15 @@
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>
-  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
-  <script src="assets/masonry/masonry.pkgd.min.js"></script>
-  <script src="assets/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script src="assets/dropdown/js/script.min.js"></script>
-  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
-  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/ytplayer/jquery.mb.ytplayer.min.js"></script>
+  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
+  <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
+  <script src="assets/dropdown/js/script.min.js"></script>
+  <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>
+  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/slidervideo/script.js"></script>
-  <script src="assets/gallery/player.min.js"></script>
-  <script src="assets/gallery/script.js"></script>
   
   
   <input name="animation" type="hidden">
