--- a/page3.html
+++ b/page3.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="mbr-section content5 cid-rebszJFGtY" id="content5-36">
+<section class="engine"><a href="https://mobirise.info/b">how to create your own site for free</a></section><section class="mbr-section content5 cid-rebszJFGtY" id="content5-36">
 
     
 
@@ -86,7 +86,7 @@
 
     <figure class="mbr-figure container">
             <div class="image-block" style="width: 50%;">
-                <img src="assets/images/jumbotron.jpg" width="1400" alt="Mobirise">
+                <img src="assets/images/groepsfoto-1-1110x624.jpg" width="1400" alt="Mobirise" title="">
                 
             </div>
     </figure>
